@@ -66,7 +66,7 @@ changes  always take effect in both places
  <li> Scheme scripting interface.
 <p>
 
- Users can extend the program by using the builting Scheme
+ Users can extend the program by using the built-in Scheme
  interpreter.  Such Scheme functions provide a plug-in functionality,
  and they can be as powerful as the built-in functionality.
 
@@ -115,10 +115,10 @@ example with German note names, and may be transposed to other keys.
 </ul><p>
 
   <li> PostScript output.
-
+<p>
 PostScript output is generated via the TeX typesetting system. The
 output can be postprocessed to produce PDF, or images for use on the
-web.
+web.</p>
    
  <li>Conforms to the GNU Coding standards.
 <p>
