@@ -74,7 +74,6 @@ lowercase letter:
           Not declaring: `foo'.
 </pre>
 <li> To avoid having a number of different messages for the same
-<p>
 situation, we'll use quoting like this `"message: `%s'"' for all
 strings.  Numbers are not quoted:
 </p>
@@ -84,7 +83,6 @@ strings.  Numbers are not quoted:
 
 </pre>
 <li> Think about translation issues.  In a lot of cases, it is better to
-<p>
 translate a whole message.  The english grammar mustn't be imposed
 on the translator.  So, iso
 </p>
@@ -129,7 +127,7 @@ Use two spaces after end of sentence punctuation.  No punctuation
 without context.  It's probably safe to treat most occurences of
 words like stem, beam, crescendo as separately translatable words.
 </p>
-<li> When translating, it is preferrable to put interesting information
+<li> When translating, it is preferable to put interesting information
 at the end of the message, rather than embedded in the middle.
 This especially applies to frequently used messages, even if this
 would mean sacrificing a bit of eloquency.  This holds for original
@@ -143,7 +141,7 @@ messages too, of course.
 
 </pre>
 <p>
-The first nl message, although gramatically and stylishly correct,
+The first nl message, although grammatically and stylishly correct,
 is not friendly for parsing by humans (even if they speak dutch).
 I guess we'd prefer something like (2) or (3).
 </p>
